Update demo links to urgs.renaissanceproject.ca

--- a/litchi.html
+++ b/litchi.html
@@ -22,7 +22,7 @@
         <a href="index.html" class="nav-link" id="nav-home">Accueil</a>
         <a href="urgs.html" class="nav-link" id="nav-urgs">URGS</a>
         <a href="litchi.html" class="nav-link litchi active" id="nav-litchi">Litchi</a>
-        <a href="demo.html" class="nav-btn" id="nav-demo">Démo</a>
+        <a href="https://urgs.renaissanceproject.ca" class="nav-btn" id="nav-demo">Démo</a>
         <div class="lang-selector">
           <button class="lang-btn" data-lang="fr">FR</button>
           <button class="lang-btn" data-lang="en">EN</button>
@@ -38,7 +38,7 @@
         <a href="index.html" id="mobile-nav-home">Accueil</a>
         <a href="urgs.html" id="mobile-nav-urgs">URGS</a>
         <a href="litchi.html" id="mobile-nav-litchi">Litchi</a>
-        <a href="demo.html" id="mobile-nav-demo">Démo</a>
+        <a href="https://urgs.renaissanceproject.ca" id="mobile-nav-demo">Démo</a>
         <div class="lang-selector" style="margin-top: 1rem;">
           <button class="lang-btn" data-lang="fr">FR</button>
           <button class="lang-btn" data-lang="en">EN</button>
