--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="index.html" class="nav-link active" id="nav-home">Accueil</a>
         <a href="urgs.html" class="nav-link" id="nav-urgs">URGS</a>
         <a href="litchi.html" class="nav-link litchi" id="nav-litchi">Litchi</a>
-        <a href="demo.html" class="nav-btn" id="nav-demo">Démo</a>
+        <a href="https://urgs.renaissanceproject.ca" class="nav-btn" id="nav-demo">Démo</a>
         <div class="lang-selector">
           <button class="lang-btn" data-lang="fr">FR</button>
           <button class="lang-btn" data-lang="en">EN</button>
@@ -41,7 +41,7 @@
         <a href="index.html" id="mobile-nav-home">Accueil</a>
         <a href="urgs.html" id="mobile-nav-urgs">URGS</a>
         <a href="litchi.html" id="mobile-nav-litchi">Litchi</a>
-        <a href="demo.html" id="mobile-nav-demo">Démo</a>
+        <a href="https://urgs.renaissanceproject.ca" id="mobile-nav-demo">Démo</a>
         <div class="lang-selector" style="margin-top: 1rem;">
           <button class="lang-btn" data-lang="fr">FR</button>
           <button class="lang-btn" data-lang="en">EN</button>
@@ -62,7 +62,7 @@
         </h1>
         <p class="hero-subtitle" id="hero-subtitle">Renaissance développe un middleware qui donne à l'IA l'intelligence émotionnelle pour construire des relations significatives, sécuritaires et durables avec les utilisateurs.</p>
         <div class="hero-buttons">
-          <a href="demo.html" class="btn btn-primary" id="hero-cta1">Essayer la démo URGS</a>
+          <a href="https://urgs.renaissanceproject.ca" class="btn btn-primary" id="hero-cta1">Essayer la démo URGS</a>
           <a href="urgs.html" class="btn btn-secondary" id="hero-cta2">En savoir plus</a>
         </div>
       </div>
