--- a/urgs.html
+++ b/urgs.html
@@ -22,7 +22,7 @@
         <a href="index.html" class="nav-link" id="nav-home">Accueil</a>
         <a href="urgs.html" class="nav-link active" id="nav-urgs">URGS</a>
         <a href="litchi.html" class="nav-link litchi" id="nav-litchi">Litchi</a>
-        <a href="demo.html" class="nav-btn" id="nav-demo">Démo</a>
+        <a href="https://urgs.renaissanceproject.ca" class="nav-btn" id="nav-demo">Démo</a>
         <div class="lang-selector">
           <button class="lang-btn" data-lang="fr">FR</button>
           <button class="lang-btn" data-lang="en">EN</button>
@@ -38,7 +38,7 @@
         <a href="index.html" id="mobile-nav-home">Accueil</a>
         <a href="urgs.html" id="mobile-nav-urgs">URGS</a>
         <a href="litchi.html" id="mobile-nav-litchi">Litchi</a>
-        <a href="demo.html" id="mobile-nav-demo">Démo</a>
+        <a href="https://urgs.renaissanceproject.ca" id="mobile-nav-demo">Démo</a>
         <div class="lang-selector" style="margin-top: 1rem;">
           <button class="lang-btn" data-lang="fr">FR</button>
           <button class="lang-btn" data-lang="en">EN</button>
@@ -56,7 +56,7 @@
           <div class="page-badge" id="page-badge">Technologie de base</div>
           <h1 class="page-title" id="page-title">Universal Relational Governance System</h1>
           <p class="page-subtitle" id="page-subtitle">La couche middleware qui transforme n'importe quel LLM en un système IA émotionnellement intelligent et relationnellement conscient.</p>
-          <a href="demo.html" class="btn btn-primary" id="page-cta">Essayer la démo interactive</a>
+          <a href="https://urgs.renaissanceproject.ca" class="btn btn-primary" id="page-cta">Essayer la démo interactive</a>
         </div>
         <div class="page-header-visual">
           <div class="architecture-box">
