Add Admin button to Litchi page

--- a/litchi.html
+++ b/litchi.html
@@ -56,6 +56,7 @@
           <p class="page-subtitle" id="page-subtitle">Contrôle tous tes outils de productivité en langage naturel. Email, calendrier, fichiers, musique, navigation — dis ce que tu veux, Litchi s'en occupe.</p>
           <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
             <a href="https://litchi.renaissanceproject.ca/pwa/" class="btn btn-primary" id="demo-btn">Essayer la démo</a>
+            <a href="https://litchi.renaissanceproject.ca/pwa/admin.html" class="btn btn-secondary" style="background: #AF52DE;">Admin</a>
           </div>
         </div>
         <div class="page-header-visual">
